--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: "Vaishnavi Girish – Electrical Engineering Portfolio"
-description: "Embedded systems, AI for infrastructure, and digital manufacturing cybersecurity | New York University Electrical Engineering + Finance minor"
+description: "Embedded systems, AI for infrastructure, and Digital Manufacturing Cybersecurity | New York University Electrical Engineering + Finance minor"
 theme: jekyll-theme-cayman
 
