--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 title: "Vaishnavi Girish – Electrical Engineering Portfolio"
-description: "Embedded systems, AI for infrastructure, and Digital Manufacturing Cybersecurity | New York University Electrical Engineering + Finance minor"
+description: "New York University Electrical Engineering + Finance minor"
 theme: jekyll-theme-cayman
-
