--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-title: "Vaishnavi Girish – Electrical Engineering Portfolio"
-description: "New York University Electrical Engineering + Finance minor"
+title: "Vaishnavi Girish"
+description: "Electrical Engineering Portfolio"
+tagline: "New York University • Major: Electrical Engineering • Finance Minor"
 theme: jekyll-theme-cayman
